k8s/Balancer-servise.yaml
apiVersion: v1
kind: Service
metadata:
  name: Balanscer-service
  namespace: ingress-nginx
spec:
  selector:
    app.kubernetes.io/name: ingress-nginx
  ports:
    - name: http
      port: 80
      targetPort: 80
    - name: https
      port: 443
      targetPort: 443
  type: LoadBalancer
